# pi2comercio

./: .dockerignore  .env  .envCOPY  .envCopy  .gitignore  Dockerfile  README.md  database.db  database.py  dev.sqlite3  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
app/api/: auth.py  bills.py  connect2.0.py  itens.py  places.py  products.py  transaction.py  transation.py  users.py
app/models/: bills.py  financial.py  items.py  itens.py  places.py  products.py  transaction.py  transation.py  users.py
app/products/: api.py  models.py  schemas.py
app/schemas/: base.py  bills.py  items.py  itens.py  places.py  products.py  transaction.py  transation.py  users.py
app/services/: base.py  bills.py  items.py  itens.py  places.py  products.py  security.py  transaction.py  transation.py  users.py
nginx/: nginx.conf
nginx/http.d/: default.conf
static/products/: 4f0e7ae3-3dfc-4db4-9cdb-a4aad46ad685.jfif
tests/: conftest.py  test_products.py  test_users.py
tests/products/: test_products.py  utils.py
