[tool.poetry]
name = "pi2comercio"
version = "0.1.0"
description = ""
authors = ["moliv <molivramento@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
